--- a/style.css
+++ b/style.css
@@ -257,8 +257,8 @@ img {
 .grid {
   margin-top: 80px;
   display: grid;
-  grid-template-columns: auto auto auto;
-  grid-gap: 40px 20px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 30px 30px;
 }
 
 .column {
@@ -299,7 +299,6 @@ img {
 .box img {
   transition: 0.5s;
   width: 100%;
-  height: 190px;
 }
 
 .column:hover img {
@@ -350,6 +349,7 @@ img {
 .aboutwrapper img {
   width: 36%;
   margin-top: 112px;
+  margin-bottom: 10px;
 }
 
 /* Footer */
@@ -395,7 +395,7 @@ footer {
 
   .grid {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 1fr 1fr;
     grid-gap: 30px 20px;
   }
 
@@ -488,7 +488,6 @@ footer {
   .box img {
     transition: 0.5s;
     width: 100%;
-    height: 280px;
   }
 
   .box {
