--- a/style.css
+++ b/style.css
@@ -346,10 +346,14 @@ img {
   width: 88%;
 }
 
-.aboutwrapper img {
-  width: 44%;
+.profileimg {
+  width: 770px;
   margin-top: 112px;
   margin-bottom: 10px;
+}
+
+.profileimg img {
+  margin: 0;
 }
 
 /* Footer */
@@ -554,7 +558,7 @@ footer {
   }
 
   .primarydetails02 {
-    display:none;
+    display: none;
   }
 
   .secondarydetails {
@@ -562,13 +566,13 @@ footer {
   }
 
   .secondarydetails02 {
-    display:none;
+    display: none;
   }
 
   .thirddetails {
     display: none;
   }
- 
+
   .projecttitle {
     width: 100%;
   }
