--- a/style.css
+++ b/style.css
@@ -1,21 +1,20 @@
 body {
   font-family: "Rubik", sans-serif;
-  max-width: 940px;
   margin: 0 auto;
   margin-top: 3em;
 }
 
 /* Font Size */
 h1 {
-  font-size: 3em;
-  line-height: 1.05em;
+  font-size: 50px; /*3em*/
+  line-height: 80px;/*1.05em*/
   font-weight: 500;
 }
 
 h2 {
-  font-size: 2.25em;
-  line-height: 1.25em;
-  font-weight: 400;
+  font-size: 36px;/*2.25em*/
+  line-height: 55px;/*1.25em*/
+  font-weight: 500;
   margin: 0;
 }
 
@@ -73,7 +72,10 @@ a:hover {
 }
 
 .title {
-  margin: 160px 0 20px 0;
+  margin: 160px 0 0px 0;
+}
+.title2 {
+  margin-top:80px;
 }
 
 .subheader {
@@ -107,6 +109,7 @@ ul {
 
 li {
   margin-left: 22px;
+  font-size: 0.9em;
   font-weight: 400;
 }
 
@@ -123,6 +126,7 @@ nav {
 
 .navcontent {
   display: flex;
+  display: -webkit-flex;
   justify-content: space-between;
   align-items: center;
   height: 100%;
@@ -137,6 +141,61 @@ nav {
 
 .logo {
   font-weight: 700;
+}
+
+/* home */
+.titlecontainer{
+  max-width: 940px;
+  margin: 0 auto;
+  padding-bottom: 80px;
+}
+
+.mainwork{
+  background-color:#FAFAFA;
+}
+
+.mainwork2{
+  background-color:#FFFFFF;
+}
+
+
+.mainworkcontent{
+  max-width: 940px;
+  margin: 0 auto;
+  display:flex;
+  padding: 72px;
+}
+
+.mainworktext{
+  margin-right:50px;
+}
+
+.mainworkcontent h2{
+  margin: 8px 0;
+  color: #000000;
+}
+.mainworkcontent span{
+  margin: 8px 0;
+  color: #7D7D7D;
+  font-style: normal;
+}
+.mainworkcontent h6{
+  color: #7D7D7D;
+  margin: 24px 0;
+}
+.mainworkcontent img{
+  width: 480px;
+  height: intrinsic;
+  margin: 0;
+  transition: 0.5s;
+}
+
+.mainworkcontent:hover img {
+  transform: scale(1.02);
+}
+
+.mainworkcontent:hover h6 {
+  color: #3c54a4;
 }
 
 /* Project Classes */
@@ -264,21 +323,17 @@ img {
 .column {
   display: inline-grid;
 }
-
-.column h4 {
+.column h6 {
   z-index: 2;
-  position: relative;
-  margin-top: -60px;
-  margin-left: 15px;
-  margin-bottom: 5px;
-  padding-right: 30px;
+  margin-top: 18px;
+  margin-bottom: 9px;
+  font-weight: 100;
+  color: #7d7d7d
 }
 
-.column h5 {
-  z-index: 2;
-  margin: 0 0 0 15px;
-  opacity: 0.7;
-  font-weight: 400;
+.column p {
+  margin-bottom: 5px;
+  padding-right: 10px;
 }
 
 .column img {
@@ -298,27 +353,10 @@ img {
 
 .box img {
   transition: 0.5s;
-  width: 100%;
 }
 
 .column:hover img {
-  transform: scale(1.1);
-}
-
-.box::after {
-  display: block;
-  position: relative;
-  background-image: linear-gradient(
-    to bottom,
-    rgba(255, 255, 255, 0) 0,
-    rgb(255, 255, 255, 0.48) 40%,
-    rgb(255, 255, 255, 0.98) 80%,
-    rgb(255, 255, 255) 100%
-  );
-  margin-top: -140px;
-  height: 150px;
-  width: 100%;
-  content: "";
+  transform: scale(1.05);
 }
 
 .nohover:hover img {
@@ -381,10 +419,11 @@ footer {
 
 /* Media Quries */
 @media screen and (max-width: 980px) {
-  body {
-    padding: 0 24px;
+.body {
+    padding: 0 0px;
   }
-  .navcontent {
+
+.navcontent {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -394,11 +433,28 @@ footer {
     padding: 0 24px;
   }
 
-  .mainbody-02 {
+.titlecontainer{
+    max-width: 980px;
+    margin: 0 24px;
+    padding-bottom: 80px;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+
+.mainworkcontent{
+  flex-direction: column;
+}
+
+.nothome{
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+.mainbody-02 {
     width: 80%;
   }
 
-  .grid {
+.grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 30px 20px;
@@ -411,11 +467,18 @@ footer {
   .profileimg {
     display: none;
   }
+
+.mainworkcontent{
+  padding: 48px;
+}
+
+.mainworktext{
+  min-width: 360px;
 }
 
 @media screen and (max-width: 660px) {
   body {
-    padding: 0 24px;
+    padding: 0 0px;
   }
 
   .navcontent {
@@ -430,7 +493,7 @@ footer {
 
   h1 {
     font-size: 1.8em;
-    line-height: 1.05em;
+    line-height: 1.5em; /*1.05em*/
     font-weight: 500;
   }
 
@@ -484,6 +547,26 @@ footer {
     font-weight: 300;
   }
 
+  .titlecontainer{
+    max-width: 660px;
+    margin: 0 auto;
+    padding-bottom: 80px;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+
+.mainworkcontent{
+  flex-direction: column;
+}
+
+.mainworktext{
+  max-width: 360px;
+}
+
+.mainworkcontent img{
+  width: 100%;
+}
+
   .grid {
     display: grid;
     grid-template-columns: auto;
@@ -504,6 +587,11 @@ footer {
   .middle {
     margin-left: 0;
     margin-right: 0;
+  }
+
+  .nothome{
+    padding-left: 24px;
+    padding-right: 24px;
   }
 
   .mainbody-01 {
