safari height issue

--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ nav {
 
 .mainworkcontent{
   max-width: 940px;
+  max-height: 400px;
   margin: 0 auto;
   display:flex;
   padding: 72px 0px;
@@ -445,6 +446,7 @@ footer {
 .mainworkcontent{
   flex-direction: column;
   padding: 48px;
+  max-height: 1000px;
 }
 
 .nothome{
